# scout-husky-gazebo-ros2

./: .gitignore  Dockerfile  README.md  change_ownership.sh  docker-compose.yml  docker_install.sh
root_dir/: .bash_history  .bashrc  .tmux.conf
root_dir/.rviz2/: persistent_settings
root_dir/ros2_ws/src/ros2_controllers/diff_drive_controller/src/: diff_drive_controller.cpp
root_dir/ros2_ws/src/scout_v2/scout_gazebo/: CMakeLists.txt  package.xml
root_dir/ros2_ws/src/scout_v2/scout_gazebo/launch/: rviz_launch.py  scout_simu.launch.py  spawn_scout.launch.py  start_world.launch.py  text.py
root_dir/ros2_ws/src/scout_v2/scout_gazebo/models/cave_world_t/: model.sdf
root_dir/ros2_ws/src/scout_v2/scout_gazebo/models/marsyard2020_terrain/: model.config  model.sdf
root_dir/ros2_ws/src/scout_v2/scout_gazebo/models/marsyard2021_terrain/: model.config
root_dir/ros2_ws/src/scout_v2/scout_gazebo/rviz/: urdf_config.rviz
root_dir/ros2_ws/src/scout_v2/scout_gazebo/sdf/: landmark.sdf.xacro
root_dir/ros2_ws/src/scout_v2/scout_gazebo/worlds/: clearpath_playpen.world  inspection.world  marsyard2020.world  marsyard2020.world.xacro  marsyard2021.world  marsyard2021.world.xacro  office_env_large.world  office_modified.world  real_world_copy.world  simple.world  simple_walls.world  subt_world.world  subt_world.world.xacro  walls.world
root_dir/ros2_ws/src/scout_v2/scout_navigation2/: CMakeLists.txt  package.xml
root_dir/ros2_ws/src/scout_v2/scout_navigation2/config/: ekf_with_gps.yaml
root_dir/ros2_ws/src/scout_v2/scout_navigation2/launch/: nav2.launch.py  navigation.launch.py  scout_rtab_rgbd.launch.py
root_dir/ros2_ws/src/scout_v2/scout_navigation2/params/: nav2_params.yaml  scout_nav2_params.yaml  twist_mux.yaml
root_dir/ros2_ws/src/scout_v2/scout_navigation2/rviz/: rviz_config.rviz
root_dir/ros2_ws/src/scout_v2/scout_ros2/scout_description/: CMakeLists.txt  package.xml
root_dir/ros2_ws/src/scout_v2/scout_ros2/scout_description/config/: scout_control.yaml
root_dir/ros2_ws/src/scout_v2/scout_ros2/scout_description/launch/: scout_base_description.launch.py
root_dir/ros2_ws/src/scout_v2/scout_ros2/scout_teleop/: CMakeLists.txt  package.xml
root_dir/ros2_ws/src/scout_v2/scout_ros2/scout_teleop/launch/: joy_teleop.launch.xml  key_teleop.launch.xml
root_dir/ros2_ws/src/velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
root_dir/shell_scripts/: all-installed-packages.sh  basic_util.sh  colcon.sh  env_vars.sh  launch_simulation.sh  ros_package_install_essential.sh
(+10 files in other folders)
