<?xml version="1.0"?>
<package format="3">
  <name>scout_teleop</name>
  <version>1.1.0</version>
  <description>
    Scripts and launch files for Scout_V2 Rover teleoperation
  </description>

  <maintainer email="rssuchetan@gmail.com">Fictionlab</maintainer>
  <author email="rssuchetan@gmail.com">Błażej Sowa</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
